# spore-simulator

./: README.md  main.py  pyproject.toml
game/character/: abilities.py  appendages.py  builder.py  character.py  characteristics.py  managers.py
game/core/: common.py  constants.py
game/movement/: __init__.py  move.py
game/phase/: phase.py
game/process/: game_config.py  phase.py
game/world/: world.py
sporesimulator/game/: main.py
sporesimulator/game/character/: abilities.py  appendages.py  builder.py  character.py  managers.py
sporesimulator/game/core/: common.py  constants.py
sporesimulator/game/move/: __init__.py  move.py
sporesimulator/game/movement/: __init__.py  move.py
sporesimulator/game/phase/: phase.py
sporesimulator/game/process/: game_config.py  phase.py
sporesimulator/game/utils/: console.py
sporesimulator/game/world/: world.py
sporesimulator/tests/character/: test_abilities.py  test_abillities.py  test_appendage.py  test_character.py  test_managers.py
sporesimulator/tests/movement/: test_greedy_movement_agent.py
sporesimulator/tests/process/: test_game_config.py
tests/character/: test_abilities.py  test_appendage.py  test_character.py  test_characteristics.py  test_managers.py
tests/core/: test_common.py
tests/movement/: test_greedy_movement_agent.py
tests/process/: test_game_config.py
tests/world/: test_world.py
