[tool.poetry]
name = "sporesimulator"
version = "0.1.0"
description = "Assignment for Design Patterns course. Freeuni 2024."
authors = ["ndval21 <ndval21@freeuni.edu.ge>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
